fixed side title text wrapping

--- a/docs/services/custom-development/custom-development.sass
+++ b/docs/services/custom-development/custom-development.sass
@@ -1219,7 +1219,7 @@ $step6: 1919px
     .side-title
         z-index: 2
         h1
-            display: inline
+            display: inline-block
             flex-direction: column
             align-items: flex-start
             gap: 4px
@@ -1237,6 +1237,7 @@ $step6: 1919px
             letter-spacing: 0.22px
             text-transform: uppercase
             text-wrap: nowrap
+            width: max-content
 
     .section-title
         color: #333
@@ -1501,7 +1502,7 @@ $step6: 1919px
             .side-title
                 #get-in-touch
                     text-wrap: nowrap
-                    width: 195px
+                    width: 210px
                     height: 44px
 
             .section-title
@@ -1684,7 +1685,7 @@ $step6: 1919px
                 grid-area: side-title
                 #get-in-touch
                     text-wrap: nowrap
-                    width: 195px
+                    width: 210px
                     height: 44px
 
             .section-title
@@ -1910,7 +1911,7 @@ $step6: 1919px
                 grid-area: side-title
                 #get-in-touch
                     text-wrap: nowrap
-                    width: 195px
+                    width: 210px
                     height: 44px
 
             .section-title
